# gameboy-emulator

./: .gitignore  CMakeLists.txt  README.md  bitmap.c  disasm.c  emulator.c  essentials.h  notes.txt  output.txt
.github/workflows/: release.yml
include/: emulator.h  gbcpu.h  gbmem.h  gbppu.h  graphics.h  iblk0.h  iblk1.h  iblk2.h  iblk3.h  iblkcb.h  memory.h  process.h
src/: emulator.c  gbcpu.c  gbcpu.h  gbmem.h  gbppu.c  gbppu.h  graphics.c  iblk0.h  iblk1.h  iblk2.h  iblk3.h  iblkcb.h  main.c  notes.txt  process.c
